--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-pipes": "^10.0.0",
     "capacitor-firebase-auth": "^0.3.1",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
     "core-js": "^2.6.11",
     "dayjs": "^1.8.26",
     "firebase": "^7.24.0",
