--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "InfinityGenerator",
-  "description": "The most advanced and complete Mobile & PWA Ionic starter app template",
+  "description": "Hyper Contextualised Maths",
   "version": "2.0.0",
   "author": "South Devon College",
   "contributors": [
@@ -13,7 +13,8 @@
     "start": "ng serve",
     "build": "ng build",
     "lint": "ng lint",
-    "postinstall": "jetifier"
+    "postinstall": "jetifier",
+    "resources": "cordova-res ios && cordova-res android && node scripts/resources.js"
   },
   "dependencies": {
     "@angular/common": "^9.1.4",
